samples/_failures_safe/1761599077_b17d6c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a093d293.c: In function ‘main’:
./samples/SAFE/__tmp_a093d293.c:151:5: error: expected expression at end of input
  151 |     add_edge(&g, 2,
      |     ^~~~~~~~
./samples/SAFE/__tmp_a093d293.c:151:5: error: too few arguments to function ‘add_edge’
./samples/SAFE/__tmp_a093d293.c:30:6: note: declared here
   30 | void add_edge(Graph *g, int from, int to, int weight) {
      |      ^~~~~~~~
./samples/SAFE/__tmp_a093d293.c:151:5: error: expected declaration or statement at end of input
  151 |     add_edge(&g, 2,
      |     ^~~~~~~~
